--- a/BusinessLogicalLayer/BusinessLogicalLayer.csproj
+++ b/BusinessLogicalLayer/BusinessLogicalLayer.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,8 +49,9 @@
     <Compile Include="Checkers\CheckAttributeLength.cs" />
     <Compile Include="Checkers\CheckCpfRule.cs" />
     <Compile Include="Checkers\CheckEmailRule.cs" />
-    <Compile Include="AdressBll.cs" />
+    <Compile Include="AdressBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Windows\PresentationLayer.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
   <ItemGroup>
